[tool.poetry]
name = "lnd-routing"
version = "0.1.0"
description = ""
authors = ["kazuW <35624002+kazuW@users.noreply.github.com>"]
readme = "README.md"
#packages = [{include = "lnd_routing"}]

[tool.poetry.dependencies]
python = "3.11.3"
openai = "1.40.6"
httpx = "0.27.2"
python-dotenv = "1.0.1"
gradio = "4.44.1"
colorama = "0.4.6"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
scipy = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
